# TUIOSkeleton

./: CMakeLists.txt  GLWindow.cpp  GLWindow.h  MainWindow.cpp  MainWindow.h  README  SensorDevice.cpp  SensorDevice.h  SkeletonMath.cpp  SkeletonMath.h  SkeletonTracker.cpp  SkeletonTracker.h  TUIOSkeletonTracker.cpp  TUIOSkeletonTracker.h  TouchServer.cpp  TouchServer.h  callbacks.cpp  define.h  main.cpp  main.h
TUIO/: CMakeLists.txt
oscpack/: CMakeLists.txt
oscpack/osc/: OscHostEndianness.h
src/: GLWindow.cpp  GLWindow.h  MainWindow.cpp  MainWindow.h  SensorDevice.cpp  SensorDevice.h  SkeletonMath.cpp  SkeletonMath.h  SkeletonTracker.cpp  SkeletonTracker.h  TouchServer.cpp  TouchServer.h  callbacks.cpp  callbacks.h  main.cpp  main.h
